# AL-bio-question-answer-resource-book

./: .env  .gitignore  README.md  check_grade12.py  check_index.py  check_pdf.py  check_pdf_text.py  check_sinhala_pdf.py  check_sinhala_pdf2.py  index_sinhala1.py  index_txt.py  index_units.py  pyproject.toml  test_ocr.py  test_stream.py  vercel.json
api/: index.py
data/uploads/: sinhala1_ocr.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  sidebar.css
frontend/src/components/: AuthPage.jsx  BottomBar.jsx  ChatArea.jsx  Header.jsx  MessageBubble.jsx  Particles.jsx  Sidebar.jsx  StudyTimer.jsx  TypingIndicator.jsx  WeeklyChart.jsx
frontend/src/context/: AuthContext.jsx
src/app/: api.py  models.py
src/app/core/: config.py  db.py  dependencies.py  security.py
src/app/core/agents/: agents.py  graph.py  prompts.py  state.py  tools.py
src/app/core/retrieval/: vector_store.py
src/app/routers/: auth.py  study.py
src/app/services/: qa_service.py
